--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jobs List</title>
+    <link rel="stylesheet" href="index.css">
+    <title>Inventory List</title>
 </head>
 
 <body>
-    <h1>Jobs List</h1>
+    <h1>Quick Tires Inventory </h1>
     <hr />
     <p id="message"></p>
     <hr />
@@ -66,6 +67,7 @@
                 <th colspan="2"></th>
             </tr>
         </table>
+        <br>
         <button type="button" id="add-tire">add job</button>
         <button type="button" id="logoff">log off</button>
     </div>
