Updated UI and corrected the cap of letters

--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,11 @@
 
 <body>
     <h1>Quick Tires Inventory </h1>
-    <hr />
+    <!-- <hr /> -->
     <p id="message"></p>
-    <hr />
+    <!-- <hr /> -->
     <div id="logon-register" style="display:none;">
-        <button type="button" id="logon">logon</button>
+        <button type="button" id="logon">Login</button>
         <button type="button" id="register">register</button>
     </div>
     <div id="logon-div" style="display:none;">
@@ -28,7 +28,8 @@
                 <label for="password">password:</label>
                 <input type="password" id="password" />
             </div>
-            <button type="button" id="logon-button">logon</button>
+            <br>
+            <button type="button" id="logon-button">Login</button>
             <button type="button" id="logon-cancel">cancel</button>
         </form>
     </div>
@@ -50,8 +51,8 @@
                 <label for="password2">verify password:</label>
                 <input type="password" id="password2" />
             </div>
-            <button type="button" id="register-button">register</button>
-            <button type="button" id="register-cancel">cancel</button>
+            <button type="button" id="register-button">Register</button>
+            <button type="button" id="register-cancel">Cancel</button>
         </form>
     </div>
     <div id="tires" style="display:none;">
@@ -64,12 +65,12 @@
                 <th>Price</th>
                 <th>Quantity</th>
                 <th>Location</th>
-                <th colspan="2"></th>
+                <th colspan="3"></th>
             </tr>
         </table>
         <br>
-        <button type="button" id="add-tire">add job</button>
-        <button type="button" id="logoff">log off</button>
+        <button type="button" id="add-tire">Add Tire</button>
+        <button type="button" id="logoff">Log Off</button>
     </div>
     <div id="edit-tire" style="display:none;">
         <form>
