Updated the delete module so its on its own. Also corrected some spelling errors

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <!-- <hr /> -->
     <div id="logon-register" style="display:none;">
         <button type="button" id="logon">Login</button>
-        <button type="button" id="register">register</button>
+        <button type="button" id="register">Register</button>
     </div>
     <div id="logon-div" style="display:none;">
         <form>
@@ -30,7 +30,7 @@
             </div>
             <br>
             <button type="button" id="logon-button">Login</button>
-            <button type="button" id="logon-cancel">cancel</button>
+            <button type="button" id="logon-cancel">Cancel</button>
         </form>
     </div>
     <div id="register-div" style="display:none;">
