--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <h1>Quick Tires Inventory </h1>
+    <!-- <h1>API Docs</h1><a href="/api-docs">Documentation</a> -->
     <!-- <hr /> -->
     <p id="message"></p>
     <!-- <hr /> -->
